<?xml version="1.0"?>
<package format="2">
  <name>maps</name>
  <version>0.0.0</version>
  <description>The maps package</description>

  <maintainer email="embark@todo.todo">embark</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO make more granular so we don't forward all the dependencies... -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>utils_map</build_depend>
  <build_depend>utils_file</build_depend>
  <build_depend>utils_sets</build_depend>
  <build_depend>diagnostics_utils</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>utils_map</build_export_depend>
  <build_export_depend>utils_file</build_export_depend>
  <build_export_depend>utils_sets</build_export_depend>
  <build_export_depend>diagnostics_utils</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>utils_map</exec_depend>
  <exec_depend>utils_file</exec_depend>
  <exec_depend>utils_sets</exec_depend>
  <exec_depend>diagnostics_utils</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>diagnostics_utils</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
